--- a/Travail/css/404.css
+++ b/Travail/css/404.css
@@ -22,6 +22,7 @@ a,
 a:focus,
 a:hover {
   color: #fff;
+  text-decoration: underline;
 }
 
 html,
@@ -39,7 +40,19 @@ body {
   width: 100%;
   height: 100%; /* For at least Firefox */
   min-height: 100%;
+  padding-left: 0px;
 }
+
+h1{
+	font-size: 100px;
+}
+h2{
+	font-size: 100px;
+}
+h6{
+	font-size: 10px;
+}
+
 .site-wrapper {
   display: table-cell;
   vertical-align: middle;
@@ -47,18 +60,9 @@ body {
 
 }
 .404-container {
+  margin-right: auto;
+  margin-left: auto;
   width: 100%;
-}
-
-.404 {	
-}
-
-.notfound {
-
-}
-
-.text404 {
-
 }
 
 /* Sticky footer styles
@@ -67,10 +71,7 @@ html {
   position: relative;
   min-height: 100%;
 }
-body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
-}
+
 .footer {
   position: absolute;
   bottom: 0;
@@ -80,6 +81,7 @@ body {
   background-color: #424242;
   color: #fff;
   font-family: "Sinkin Regular", Arial, Helvetica, sans-serif;
+  padding-left: 15px;
 }
 
 
