--- a/Travail/css/contact.css
+++ b/Travail/css/contact.css
@@ -36,13 +36,7 @@ body {
   text-align: center;
 }
 
-.container-fluid {
-  display: table;
-  width: 100%;
-  height: 100%; /* For at least Firefox */
-  min-height: 100%;
-  font-family: "Sinkin Regular", Arial, Helvetica, sans-serif;
-}
+
 
 header{
 }
@@ -50,15 +44,47 @@ header{
 h1{
 	font-size: 100px;
 }
+
 h2{
-	font-size: 100px;
+	font-size: 36px;
 }
+
+h3{
+  font-size: 13px;
+}
+
+h4{
+  font-size: 11px;
+}
+
+h5{
+  font-size: 10px;
+}
+
 h6{
-	font-size: 10px;
+	font-size: 8px;
+}
+
+textarea{
+  max-width: 100%;
+}
+
+.container-fluid {
+  display: table;
+  width: 100%;
+  height: 100%; /* For at least Firefox */
+  min-height: 100%;
+  font-family: "Sinkin Regular", Arial, Helvetica, sans-serif;
+  padding-left: 450px;
+  padding-right: 450px;
 }
 
 .wrapper {
   display: inline;
-  vertical-align: middle;
   font-family: "Sinkin Regular", Arial, Helvetica, sans-serif;
+}
+
+.form-name {
+  max-width: 100%;
+  text-align: left;
 }
