--- a/Travail/css/home.css
+++ b/Travail/css/home.css
@@ -22,7 +22,7 @@ a,
 a:focus,
 a:hover {
   color: #fff;
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 html,
@@ -65,11 +65,22 @@ h6{
 	font-size: 8px;
 }
 
-.navbar{
-  font-size: 12px;
-  border-top: 1px solid #A4A4A4;
-  border-bottom: 1px solid #A4A4A4;
-  
+.ctn-navbar{
+
+}
+
+.ctn-navmenu{
+
+  padding-bottom: 15px;
+}
+
+.ctn-main{
+}
+
+.ctn-carousel{
+
+  width: 100%;
+  height: 50%;
 }
 
 .navbar-brand{
@@ -89,8 +100,218 @@ h6{
 
 }
 
+.navbar-menu{
+
+  padding-bottom: 15px;
+  
+
+}
+
+.nav{
+  font-size: 10px;
+  color: #000;
+}
+
+.navbar {
+  border-left: 1px solid #A4A4A4;
+  border-right: 1px solid #A4A4A4;
+  font-size: 12px;
+  border-top: 1px solid #A4A4A4;
+  border-bottom: 1px solid #A4A4A4;
+}
+
 .divider-vertical {
-height: 50px;
-border-left: 1px solid #A4A4A4;
-border-right: 1px solid #A4A4A4;
+  height: 50px;
+  border-left: 1px solid #A4A4A4;
+  border-right: 1px solid #A4A4A4;
+}
+
+.carousel-inner > .item > a > img, .carousel-inner > .item > img, .img-responsive, .thumbnail a > img, .thumbnail > img {
+    display: block;
+    height: auto;
+    max-width: 100%;
+}
+
+.carousel {
+
+}
+
+.carousel-inner {
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+}
+.carousel-inner > .item {
+    display: none;
+    position: relative;
+    transition: left 0.6s ease-in-out 0s;
+}
+.carousel-inner > .item > a > img, .carousel-inner > .item > img {
+    line-height: 1;
+}
+@media not all, not all {
+.carousel-inner > .item {
+    backface-visibility: hidden;
+    perspective: 1000px;
+    transition: transform 0.6s ease-in-out 0s;
+}
+.carousel-inner > .item.active.right, .carousel-inner > .item.next {
+    left: 0;
+    transform: translate3d(100%, 0px, 0px);
+}
+.carousel-inner > .item.active.left, .carousel-inner > .item.prev {
+    left: 0;
+    transform: translate3d(-100%, 0px, 0px);
+}
+.carousel-inner > .item.active, .carousel-inner > .item.next.left, .carousel-inner > .item.prev.right {
+    left: 0;
+    transform: translate3d(0px, 0px, 0px);
+}
+}
+.carousel-inner > .active, .carousel-inner > .next, .carousel-inner > .prev {
+    display: block;
+}
+.carousel-inner > .active {
+    left: 0;
+}
+.carousel-inner > .next, .carousel-inner > .prev {
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
+.carousel-inner > .next {
+    left: 100%;
+}
+.carousel-inner > .prev {
+    left: -100%;
+}
+.carousel-inner > .next.left, .carousel-inner > .prev.right {
+    left: 0;
+}
+.carousel-inner > .active.left {
+    left: -100%;
+}
+.carousel-inner > .active.right {
+    left: 100%;
+}
+.carousel-control {
+    background-color: rgba(0, 0, 0, 0);
+    bottom: 0;
+    color: #fff;
+    font-size: 20px;
+    left: 0;
+    opacity: 0.5;
+    position: absolute;
+    text-align: center;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
+    top: 0;
+    width: 15%;
+}
+.carousel-control.left {
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.5) 0px, rgba(0, 0, 0, 0) 100%);
+    background-repeat: repeat-x;
+}
+.carousel-control.right {
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0) 0px, rgba(0, 0, 0, 0.5) 100%);
+    background-repeat: repeat-x;
+    left: auto;
+    right: 0;
+}
+.carousel-control:focus, .carousel-control:hover {
+    color: #fff;
+    opacity: 0.9;
+    outline: 0 none;
+    text-decoration: none;
+}
+.carousel-control .glyphicon-chevron-left, .carousel-control .glyphicon-chevron-right, .carousel-control .icon-next, .carousel-control .icon-prev {
+    display: inline-block;
+    margin-top: -10px;
+    position: absolute;
+    top: 50%;
+    z-index: 5;
+}
+.carousel-control .glyphicon-chevron-left, .carousel-control .icon-prev {
+    left: 50%;
+    margin-left: -10px;
+}
+.carousel-control .glyphicon-chevron-right, .carousel-control .icon-next {
+    margin-right: -10px;
+    right: 50%;
+}
+.carousel-control .icon-next, .carousel-control .icon-prev {
+    font-family: serif;
+    height: 20px;
+    line-height: 1;
+    width: 20px;
+}
+.carousel-control .icon-prev::before {
+    content: "‹";
+}
+.carousel-control .icon-next::before {
+    content: "›";
+}
+.carousel-indicators {
+    bottom: 10px;
+    left: 50%;
+    list-style: outside none none;
+    margin-left: -30%;
+    padding-left: 0;
+    position: absolute;
+    text-align: center;
+    width: 60%;
+    z-index: 15;
+}
+.carousel-indicators li {
+    background-color: rgba(0, 0, 0, 0);
+    border: 1px solid #fff;
+    border-radius: 10px;
+    cursor: pointer;
+    display: inline-block;
+    height: 10px;
+    margin: 1px;
+    text-indent: -999px;
+    width: 10px;
+}
+.carousel-indicators .active {
+    background-color: #fff;
+    height: 12px;
+    margin: 0;
+    width: 12px;
+}
+.carousel-caption {
+    bottom: 20px;
+    color: #fff;
+    left: 15%;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    position: absolute;
+    right: 15%;
+    text-align: center;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
+    z-index: 10;
+}
+.carousel-caption .btn {
+    text-shadow: none;
+}
+@media screen and (min-width: 768px) {
+.carousel-control .glyphicon-chevron-left, .carousel-control .glyphicon-chevron-right, .carousel-control .icon-next, .carousel-control .icon-prev {
+    font-size: 30px;
+    height: 30px;
+    margin-top: -10px;
+    width: 30px;
+}
+.carousel-control .glyphicon-chevron-left, .carousel-control .icon-prev {
+    margin-left: -10px;
+}
+.carousel-control .glyphicon-chevron-right, .carousel-control .icon-next {
+    margin-right: -10px;
+}
+.carousel-caption {
+    left: 20%;
+    padding-bottom: 30px;
+    right: 20%;
+}
+.carousel-indicators {
+    bottom: 20px;
+}
 }
