--- a/Travail/css/home.css
+++ b/Travail/css/home.css
@@ -28,6 +28,7 @@ a:hover {
 html,
 body {
   height: 100%;
+  width: 100%;
   background-color: #fff;
   font-family: "Sinkin Regular", Arial, Helvetica, sans-serif;
 }
@@ -50,7 +51,7 @@ h2{
 }
 
 h3{
-  font-size: 13px;
+  font-size: 20px;
 }
 
 h4{
@@ -75,12 +76,30 @@ h6{
 }
 
 .ctn-main{
+    width: 100%;
+    height: auto;
+}
+
+.ctn-brands{
+    height: 50px;
+    padding-bottom: 15px;
 }
 
 .ctn-carousel{
 
   width: 100%;
   height: 50%;
+}
+
+.ctn-services{
+    text-align: center; 
+    padding-top:50px;
+}
+
+.ctn-test{
+    background-color: #f3f3f3; 
+    padding-top:40px;
+    padding-bottom: 40px;
 }
 
 .navbar-brand{
@@ -113,11 +132,15 @@ h6{
 }
 
 .navbar {
-  border-left: 1px solid #A4A4A4;
-  border-right: 1px solid #A4A4A4;
   font-size: 12px;
-  border-top: 1px solid #A4A4A4;
-  border-bottom: 1px solid #A4A4A4;
+}
+
+.navbar-social{
+  font-size: 20px;  
+}
+
+.navbar-services {
+    color:#CB6363;
 }
 
 .divider-vertical {
@@ -126,192 +149,11 @@ h6{
   border-right: 1px solid #A4A4A4;
 }
 
-.carousel-inner > .item > a > img, .carousel-inner > .item > img, .img-responsive, .thumbnail a > img, .thumbnail > img {
-    display: block;
-    height: auto;
-    max-width: 100%;
-}
-
-.carousel {
-
-}
-
-.carousel-inner {
-    overflow: hidden;
-    position: relative;
-    width: 100%;
-}
-.carousel-inner > .item {
-    display: none;
-    position: relative;
-    transition: left 0.6s ease-in-out 0s;
-}
-.carousel-inner > .item > a > img, .carousel-inner > .item > img {
-    line-height: 1;
-}
-@media not all, not all {
-.carousel-inner > .item {
-    backface-visibility: hidden;
-    perspective: 1000px;
-    transition: transform 0.6s ease-in-out 0s;
-}
-.carousel-inner > .item.active.right, .carousel-inner > .item.next {
-    left: 0;
-    transform: translate3d(100%, 0px, 0px);
-}
-.carousel-inner > .item.active.left, .carousel-inner > .item.prev {
-    left: 0;
-    transform: translate3d(-100%, 0px, 0px);
-}
-.carousel-inner > .item.active, .carousel-inner > .item.next.left, .carousel-inner > .item.prev.right {
-    left: 0;
-    transform: translate3d(0px, 0px, 0px);
-}
-}
-.carousel-inner > .active, .carousel-inner > .next, .carousel-inner > .prev {
-    display: block;
-}
-.carousel-inner > .active {
-    left: 0;
-}
-.carousel-inner > .next, .carousel-inner > .prev {
-    position: absolute;
-    top: 0;
-    width: 100%;
-}
-.carousel-inner > .next {
-    left: 100%;
-}
-.carousel-inner > .prev {
-    left: -100%;
-}
-.carousel-inner > .next.left, .carousel-inner > .prev.right {
-    left: 0;
-}
-.carousel-inner > .active.left {
-    left: -100%;
-}
-.carousel-inner > .active.right {
-    left: 100%;
-}
-.carousel-control {
-    background-color: rgba(0, 0, 0, 0);
-    bottom: 0;
+.sep-car{
+    opacity: 0;
     color: #fff;
-    font-size: 20px;
-    left: 0;
-    opacity: 0.5;
-    position: absolute;
-    text-align: center;
-    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
-    top: 0;
-    width: 15%;
 }
-.carousel-control.left {
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.5) 0px, rgba(0, 0, 0, 0) 100%);
-    background-repeat: repeat-x;
-}
-.carousel-control.right {
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0) 0px, rgba(0, 0, 0, 0.5) 100%);
-    background-repeat: repeat-x;
-    left: auto;
-    right: 0;
-}
-.carousel-control:focus, .carousel-control:hover {
-    color: #fff;
-    opacity: 0.9;
-    outline: 0 none;
-    text-decoration: none;
-}
-.carousel-control .glyphicon-chevron-left, .carousel-control .glyphicon-chevron-right, .carousel-control .icon-next, .carousel-control .icon-prev {
-    display: inline-block;
-    margin-top: -10px;
-    position: absolute;
-    top: 50%;
-    z-index: 5;
-}
-.carousel-control .glyphicon-chevron-left, .carousel-control .icon-prev {
-    left: 50%;
-    margin-left: -10px;
-}
-.carousel-control .glyphicon-chevron-right, .carousel-control .icon-next {
-    margin-right: -10px;
-    right: 50%;
-}
-.carousel-control .icon-next, .carousel-control .icon-prev {
-    font-family: serif;
-    height: 20px;
-    line-height: 1;
-    width: 20px;
-}
-.carousel-control .icon-prev::before {
-    content: "‹";
-}
-.carousel-control .icon-next::before {
-    content: "›";
-}
-.carousel-indicators {
-    bottom: 10px;
-    left: 50%;
-    list-style: outside none none;
-    margin-left: -30%;
-    padding-left: 0;
-    position: absolute;
-    text-align: center;
-    width: 60%;
-    z-index: 15;
-}
-.carousel-indicators li {
-    background-color: rgba(0, 0, 0, 0);
-    border: 1px solid #fff;
-    border-radius: 10px;
-    cursor: pointer;
-    display: inline-block;
-    height: 10px;
-    margin: 1px;
-    text-indent: -999px;
-    width: 10px;
-}
-.carousel-indicators .active {
+
+.txt-test{
     background-color: #fff;
-    height: 12px;
-    margin: 0;
-    width: 12px;
-}
-.carousel-caption {
-    bottom: 20px;
-    color: #fff;
-    left: 15%;
-    padding-bottom: 20px;
-    padding-top: 20px;
-    position: absolute;
-    right: 15%;
-    text-align: center;
-    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
-    z-index: 10;
-}
-.carousel-caption .btn {
-    text-shadow: none;
-}
-@media screen and (min-width: 768px) {
-.carousel-control .glyphicon-chevron-left, .carousel-control .glyphicon-chevron-right, .carousel-control .icon-next, .carousel-control .icon-prev {
-    font-size: 30px;
-    height: 30px;
-    margin-top: -10px;
-    width: 30px;
-}
-.carousel-control .glyphicon-chevron-left, .carousel-control .icon-prev {
-    margin-left: -10px;
-}
-.carousel-control .glyphicon-chevron-right, .carousel-control .icon-next {
-    margin-right: -10px;
-}
-.carousel-caption {
-    left: 20%;
-    padding-bottom: 30px;
-    right: 20%;
-}
-.carousel-indicators {
-    bottom: 20px;
-}
 }
